--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,10 @@ h2 {
   color: #A7D8FF;
 }
 
+.header-subtitle .nowrap {
+  white-space: nowrap;
+}
+
 .description {
   margin: 0.3rem 0;
   color: #DCEBFF;
